--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Viz</title>
+    <title>data viz projects</title>
     <style>
         body {
             background-color: #121212;
@@ -29,22 +29,26 @@
             color: #ffffff;
             text-decoration: none;
             transition: color 0.3s ease;
-            background-color: #826300;
+            background-color: #820000;
             padding: 10px 20px;
             border-radius: 5px;
             display: inline-block;
         }
         a:hover {
-            background-color: #433400;
+            background-color: #430000;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to Andrew Diep's Data Visualization Projects</h1>
+    <h1>Welcome to Andrew Diep's data viz projects</h1>
     <ul>
-        <li><a href="https://vizhub.com/andrewdiep1/a730d18f73e64ea092aa83cef8b10833">Health bar chart</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/d50b5fcf08bd4a07aa4487808881f19d">Health dot plot</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/c5d61d4506fb46ee83352ce109f81cc5">Health heatmap</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/a730d18f73e64ea092aa83cef8b10833">bar chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/d50b5fcf08bd4a07aa4487808881f19d">dot plot</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/c5d61d4506fb46ee83352ce109f81cc5">heatmap</a></li>
+        <hr style="width: 33%;">
+        <li><a href="https://vizhub.com/andrewdiep1/4fa14988b0e44a67b65b3ccbd6629dfe">histogram</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/bcd7f312bd7844769d5f18adb531b7b1">box plot</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/9986e1ebbf2246fc81b86ff5eb6e4759">strip chart</a></li>
     </ul>
 </body>
 </html>
