--- a/index.html
+++ b/index.html
@@ -29,26 +29,31 @@
             color: #ffffff;
             text-decoration: none;
             transition: color 0.3s ease;
-            background-color: #820000;
+            background-color: maroon;
             padding: 10px 20px;
             border-radius: 5px;
             display: inline-block;
         }
         a:hover {
-            background-color: #430000;
+            background-color: crimson;
         }
     </style>
 </head>
 <body>
     <h1>Welcome to Andrew Diep's data viz projects</h1>
     <ul>
-        <li><a href="https://vizhub.com/andrewdiep1/a730d18f73e64ea092aa83cef8b10833">bar chart</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/d50b5fcf08bd4a07aa4487808881f19d">dot plot</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/c5d61d4506fb46ee83352ce109f81cc5">heatmap</a></li>
-        <hr style="width: 33%;">
-        <li><a href="https://vizhub.com/andrewdiep1/4fa14988b0e44a67b65b3ccbd6629dfe">histogram</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/bcd7f312bd7844769d5f18adb531b7b1">box plot</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/9986e1ebbf2246fc81b86ff5eb6e4759">strip chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/a730d18f73e64ea092aa83cef8b10833">p5 bar chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/d50b5fcf08bd4a07aa4487808881f19d">p5 dot plot</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/c5d61d4506fb46ee83352ce109f81cc5">p5 heatmap</a></li>
+        <hr style="width: 20%;">
+        <li><a href="https://vizhub.com/andrewdiep1/4fa14988b0e44a67b65b3ccbd6629dfe">p5 histogram</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/bcd7f312bd7844769d5f18adb531b7b1">p5 box plot</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/9986e1ebbf2246fc81b86ff5eb6e4759">p5 strip chart</a></li>
+        <hr style="width: 20%;">
+        <li><a href="https://vizhub.com/andrewdiep1/fd628d2607b6402cbad9acf632660980">d3 bar chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/2650fd04bc10428798410abbf257ff37">d3 scatter plot</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/218e666570784c5282b47572c52d4f6e">d3 heatmap</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/0aa1cbd257d7474682943c443f115411">d3 histogram</a></li>
     </ul>
 </body>
 </html>
