--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 <body>
     <h1>Welcome to Andrew Diep's data viz projects</h1>
     <ul>
+        <li><a href="https://public.tableau.com/app/profile/andrew.d3850/viz/DataExplorationthroughTableau/Dashboard1">tableau worksheet</a></li>
+        <hr style="width: 20%;">
         <li><a href="https://vizhub.com/andrewdiep1/a730d18f73e64ea092aa83cef8b10833">p5 bar chart</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/d50b5fcf08bd4a07aa4487808881f19d">p5 dot plot</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/c5d61d4506fb46ee83352ce109f81cc5">p5 heatmap</a></li>
@@ -54,6 +56,10 @@
         <li><a href="https://vizhub.com/andrewdiep1/2650fd04bc10428798410abbf257ff37">d3 scatter plot</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/218e666570784c5282b47572c52d4f6e">d3 heatmap</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/0aa1cbd257d7474682943c443f115411">d3 histogram</a></li>
+        <hr style="width: 20%;">
+        <li><a href="https://vizhub.com/andrewdiep1/6ff6088ca56540858f49e9d0fc34e8f1">d3 bubble chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/1eba32607286413795c87f9a5229881a">d3 line chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/9d8c4ca174194e7aa930658418b50b6d">d3 scatterplot matrix</a></li>
     </ul>
 </body>
 </html>
