--- a/index.html
+++ b/index.html
@@ -42,24 +42,36 @@
 <body>
     <h1>Welcome to Andrew Diep's data viz projects</h1>
     <ul>
+        <hr style="width: 20%;">
+        <h3>A1</h3>
         <li><a href="https://public.tableau.com/app/profile/andrew.d3850/viz/DataExplorationthroughTableau/Dashboard1">tableau worksheet</a></li>
         <hr style="width: 20%;">
+        <h3>A2</h3>
         <li><a href="https://vizhub.com/andrewdiep1/a730d18f73e64ea092aa83cef8b10833">p5 bar chart</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/d50b5fcf08bd4a07aa4487808881f19d">p5 dot plot</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/c5d61d4506fb46ee83352ce109f81cc5">p5 heatmap</a></li>
         <hr style="width: 20%;">
+        <h3>A3</h3>
         <li><a href="https://vizhub.com/andrewdiep1/4fa14988b0e44a67b65b3ccbd6629dfe">p5 histogram</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/bcd7f312bd7844769d5f18adb531b7b1">p5 box plot</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/9986e1ebbf2246fc81b86ff5eb6e4759">p5 strip chart</a></li>
         <hr style="width: 20%;">
+        <h3>A4</h3>
         <li><a href="https://vizhub.com/andrewdiep1/fd628d2607b6402cbad9acf632660980">d3 bar chart</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/2650fd04bc10428798410abbf257ff37">d3 scatter plot</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/218e666570784c5282b47572c52d4f6e">d3 heatmap</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/0aa1cbd257d7474682943c443f115411">d3 histogram</a></li>
         <hr style="width: 20%;">
+        <h3>A5</h3>
         <li><a href="https://vizhub.com/andrewdiep1/6ff6088ca56540858f49e9d0fc34e8f1">d3 bubble chart</a></li>
-        <li><a href="https://vizhub.com/andrewdiep1/1eba32607286413795c87f9a5229881a">d3 line chart</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/1eba32607286413795c87f9a5229881a">d3 line chart (3 lines)</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/9d8c4ca174194e7aa930658418b50b6d">d3 scatterplot matrix</a></li>
+        <hr style="width: 20%;">
+        <h3>A6</h3>
+        <li><a href="https://vizhub.com/andrewdiep1/2481401bbd4a4ee08e04b8efd2ff6c66">d3 bar sequential</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/6a9bbf0d2e9a45b1a3d6c8cc46d900d3">d3 bar diverging</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/642615d91aea44678212e1c3bdbc56bb">d3 scatterplot qualitative</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/73028c375e3c4673918ecd906b445cca">d3 line chart (5 lines)</a></li>
     </ul>
 </body>
 </html>
