--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
             color: #ffffff;
             text-decoration: none;
             transition: color 0.3s ease;
-            background-color: maroon;
+            background-color: rgb(128, 85, 0);
             padding: 10px 20px;
             border-radius: 5px;
             display: inline-block;
         }
         a:hover {
-            background-color: crimson;
+            background-color: rgb(220, 157, 20);
         }
     </style>
 </head>
@@ -72,6 +72,12 @@
         <li><a href="https://vizhub.com/andrewdiep1/6a9bbf0d2e9a45b1a3d6c8cc46d900d3">d3 bar diverging</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/642615d91aea44678212e1c3bdbc56bb">d3 scatterplot qualitative</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/73028c375e3c4673918ecd906b445cca">d3 line chart (5 lines)</a></li>
+        <hr style="width: 20%;">
+        <h3>A7</h3>
+        <li><a href="https://vizhub.com/andrewdiep1/f392a4e29e5147a7a30f6e8b98ba4ca1">d3 time series multiline</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/8891d1451d794c148b104da65c818d85">d3 time series heatmap</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/de56dd3c3b8c40399560fc6257f05301">d3 time series small multiples</a></li>
+        <li><a href="https://vizhub.com/andrewdiep1/a849fec3165a42a5b5ffd0c167d5d033">d3 time series streamgraph</a></li>
     </ul>
 </body>
 </html>
