--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     -->
     <ul>
         <hr style="width: 33%;">
+        <h3>A10</h3>
+        <li><a href="a10-A/index.html">Part 1</a></li>
+        <li><a href="a10-A+/index.html">Part 2</a></li>
+        <hr style="width: 33%;">
         <h3>A9</h3>
         <li><a href="https://vizhub.com/andrewdiep1/c27d0980d89d4d48a6b712282d87a776">d3 choropleth map</a></li>
         <li><a href="https://vizhub.com/andrewdiep1/5b61e597ddd94a318569df8664b130e4">d3 proportional symbols map</a></li>
