Start on A10 page

--- a/a10-A/index.html
+++ b/a10-A/index.html
@@ -15,7 +15,10 @@
     <script src="https://d3js.org/d3.v7.js"></script>
 </head>
 <body>
+    <h2>A10 Part 1</h2>
+    <h3>Black Hat Viz</h3>
     <script src="blackhat.js"></script>
+    <h3>White Hat Viz</h3>
     <script src="whitehat.js"></script>
 </body>
 </html>
