--- a/a10-A/index.html
+++ b/a10-A/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A10</title>
-    <style>
-        body {
-            text-align: center;
-            font-family: Arial, sans-serif;
-            background-color: black;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v7.js"></script>
 </head>
 <body>
@@ -19,6 +12,7 @@
     <h3>Black Hat Viz</h3>
     <script src="blackhat.js"></script>
     <h3>White Hat Viz</h3>
+    <div id="chart"></div>
     <script src="whitehat.js"></script>
 </body>
 </html>
