--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
     -->
     <ul>
         <hr style="width: 33%;">
+        <li><a href="test/index.html">test</a></li>
+        <hr style="width: 33%;">
         <h3>A10</h3>
         <li><a href="a10-A/index.html">Part 1</a></li>
         <li><a href="a10-A+/index.html">Part 2</a></li>
