Finish color scale and legend

--- a/a10-A/index.html
+++ b/a10-A/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A10</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://d3js.org/d3.v7.js"></script>
+    <script src="https://d3js.org/d3.v6.js"></script>
+    <script src="https://colorbrewer2.org/export/colorbrewer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 </head>
 <body>
     <h2>A10 Part 1</h2>
