Finish white hat visualization!

--- a/a10-A/index.html
+++ b/a10-A/index.html
@@ -8,13 +8,21 @@
     <script src="https://d3js.org/d3.v6.js"></script>
     <script src="https://colorbrewer2.org/export/colorbrewer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-annotation/2.5.1/d3-annotation.min.js"></script>
 </head>
 <body>
     <h2>A10 Part 1</h2>
     <h3>Black Hat Viz</h3>
     <script src="blackhat.js"></script>
     <h3>White Hat Viz</h3>
+    <h2>Comparison of U.S. Goods Imports and Exports (1999-2021)</h2>
+    <p>Psst... use the drop down menu below to select a year to view the data for that year.</p>
+    <p>Hover over the bars to see the exact values and differences between imports and exports.</p>
     <div id="chart"></div>
     <script src="whitehat.js"></script>
+    <footer>
+        <p>Data source: <a href="https://usafacts.org/economy/" target="_blank">Original data set</a></p>
+        <p>Data was spliced and transposed to contain only the relevant types of imports and exports.</p>
+    </footer>
 </body>
 </html>
