Move year dropdown to top of chart

--- a/a10-A/index.html
+++ b/a10-A/index.html
@@ -33,8 +33,9 @@
     <h2>Comparison of U.S. Goods Imports and Exports (1999-2021)</h2>
     <p>Psst... use the drop down menu below to select a year to view the data for that year.</p>
     <p>Hover over the bars to see the exact values and differences between imports and exports.</p>
-    <div id="chart"></div>
-    <script src="whitehat.js"></script>
+    <div id="year-dropdown"></div>
+    <div id="bar-chart"></div>
+    <script type="module" src="whitehat.js"></script>
     <footer>
         <p>Data source: <a href="https://usafacts.org/economy/" target="_blank">Original data set</a></p>
         <p>Data was spliced and transposed to contain only the relevant types of imports and exports.</p>
