--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <li><a href="test/index.html">test</a></li> -->
         <hr style="width: 33%;">
         <h3>A10</h3>
-        <li><a href="a10-A/index.html">Part 1</a></li>
-        <li><a href="a10-A+/index.html">Part 2</a></li>
+        <li><a href="a10-A/index.html">Part 1 (A)</a></li>
+        <li><a href="a10-A+/index.html">Part 2 (A+)</a></li>
         <hr style="width: 33%;">
         <h3>A9</h3>
         <li><a href="https://vizhub.com/andrewdiep1/c27d0980d89d4d48a6b712282d87a776">d3 choropleth map</a></li>
