--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
 </head>
 <body>
     <h1>Welcome to Andrew Diep's data viz projects</h1>
-    <!-- Template
-    <li><a href=""></a></li>
-    -->
     <ul>
         <!-- <hr style="width: 33%;">
         <li><a href="test/index.html">test</a></li> -->
+        <hr style="width: 33%;">
+        <li><a href="a11/index.html">A11</a></li>
         <hr style="width: 33%;">
         <h3>A10</h3>
         <li><a href="a10-A/index.html">Part 1 (A)</a></li>
