--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <hr style="width: 33%;">
         <h3>A11</h3>
         <li><a href="a11-A/index.html">Part 1 (A)</a></li>
+        <li><a href="a11-A+/index.html">Part 2 (A+)</a></li>
         <hr style="width: 33%;">
         <h3>A10</h3>
         <li><a href="a10-A/index.html">Part 1 (A)</a></li>
