--- a/a11-A+/index.html
+++ b/a11-A+/index.html
@@ -19,6 +19,7 @@ body {
 }
 
 </style>
+<h2>Stock Prices for Top 5 Tech Companies (April 2023-2024)</h2>
 <svg width="960" height="500"></svg>
 <script src="https://d3js.org/d3.v7.min.js"></script>
 <script>
