--- a/a11-A+/index.html
+++ b/a11-A+/index.html
@@ -203,3 +203,7 @@ d3.csv("data.csv", function(d) {
 })
 
 </script>
+<footer>
+    <p>Data source: <a href="https://finance.yahoo.com/lookup" target="_blank" style="color: plum; text-decoration: none;">finance.yahoo</a></p>
+    <p>Data was processed to include only daily closing stock prices.</p>
+</footer>
